# create-slides-with-ai-workflow

./: .gitignore  README.md  app.py  input-example.md  output-example.md  output.html  prompt.md  prompt_template.md  prompt_template.py  pyproject.toml  slide-deck.md  utils.py
