[tool.poetry]
name = "create-slides-with-ai-workflow"
version = "0.1.0"
description = ""
authors = ["Raffaele Spataro <raffaele2692@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.1"
langchain-openai = "^0.2.1"
python-dotenv = "^1.0.1"
streamlit = "^1.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
